# yodle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_phase1.py  yodle.py
archive/: download_music.py  music-downloader.py  music_dl.py  music_dl_updated.py  music_mp3_dl.py  thumbnail_downloader.py  video_dl.py
docs/: IMPLEMENTATION_STATUS.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_STRATEGY.md  TODO.md
tests/: README.md  __init__.py  conftest.py  test_cookie_manager.py  test_integration.py  test_update_checker.py  test_utilities.py
